--- a/game.html
+++ b/game.html
@@ -2,10 +2,17 @@
 <html>
     <head>
         <title>g</title>
+        <style>
+            canvas {
+                border : 1px dashed #ccc;
+            }
+        </style>
         <script src="src/game.js"></script>
     </head>
     <body>
-        <canvas id="screen" width="640" height="480" />
+        <canvas id="screen" width="320" height="240" ></canvas>
+        <img src="i/tur.gif" id="sprite1" />
+
         <script>
             var G = new Game("screen");
         </script>
