--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
                 border : 1px dashed #ccc;
             }
         </style>
-        <script src="src/game.js"></script>
+        <script src="_game.js"></script>
     </head>
     <body>
-        <canvas id="screen" width="320" height="240" ></canvas>
+        <canvas id="screen" width="800" height="600" ></canvas>
         <img src="i/tur.gif" id="sprite1" />
 
         <script>
