--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <canvas id="screen" width="800" height="600" ></canvas>
-        <img src="i/tur.gif" id="sprite1" />
+        <img src="i/circle.png" id="sprite1" />
 
         <script>
             var G = new Game("screen");
