--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
         <style>
             canvas {
                 border : 1px dashed #ccc;
+                background: url(i/space.png);
+            }
+
+            body {
+                background : #000;
             }
         </style>
         <script src="_game.js"></script>
     </head>
     <body>
         <canvas id="screen" width="800" height="600" ></canvas>
-        <img src="i/circle.png" id="sprite1" />
 
         <script>
             var G = new Game("screen");
