--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 background : #000;
             }
         </style>
-        <script src="_game.js"></script>
+        <script src="game.js"></script>
     </head>
     <body>
         <canvas id="screen" width="800" height="600" ></canvas>
